# f1-lane-detection

./: .gitignore  README.md  box_around_car.py  capture_frames.py  convert_json_to_mask.py  cu_lane_dataset_class.py  detect_lanes.py  detect_lanes_using_model.py  download_vid_from_youtube.py  lane_dataset_class.py  lane_detection_cnn.py  lane_detection_u_net.py  main.py  model_defination.py  pyproject.toml  rename.py  train_val_split.py
